# UniTry

./: .gitignore  404.html  ARCHITECTURE.md  README.md  demo.html  demo.txt  index.html  index.txt  package.json  prototype.html  prototype.txt
_next/static/chunks/: 23-5f82d135c32ee15b.js  923-0c2a4075e068bb63.js  974-683d312170ec34f1.js  main-95a69b82e6c9c327.js  main-app-b40605bafa32f36d.js  webpack-99cb36d9a51eb9c0.js
_next/static/chunks/app/: layout-89a1cfbd890928a0.js  page-83a635e04c558d5c.js
_next/static/chunks/app/demo/: page-b68b1c9717385ab6.js
_next/static/chunks/app/prototype/: page-b9ee798eb09498c6.js
_next/static/css/: 30bc3b4478740682.css
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  tryon.py
backend/app/core/: config.py
backend/app/schemas/: tryon.py
backend/app/services/: diffusion.py
backend/model/: liblib.py
backend/tests/: test_health.py
frontend/: next.config.mjs  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/prototype/: page.tsx
frontend/components/: ClothingRecommendation.tsx  FinalLook.tsx  LabelTag.tsx  LiveCameraPreview.tsx  Modal.tsx  OutfitChosen.tsx
frontend/lib/: basePath.ts
frontend/public/assets/outfits_man/: label.json
frontend/public/assets/outfits_woman/: label.json
