[project]
name = "unitry-backend"
version = "0.1.0"
description = "FastAPI backend for the UniTry smart wardrobe experience."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "fastapi[all]>=0.110"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
